--- a/Apps/buglog/BugLog.WPF/MainWindow.xaml
+++ b/Apps/buglog/BugLog.WPF/MainWindow.xaml
@@ -1,13 +1,158 @@
-﻿<wpf:FormsApplicationPage x:Class="BugLog.WPF.MainWindow"
+﻿<Window x:Class="BugLog.Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:fa5="http://schemas.fontawesome.com/icons/"
+        xmlns:ctl="clr-namespace:BugLog.Wpf.Controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BugLog.WPF"
-        xmlns:wpf="clr-namespace:Xamarin.Forms.Platform.WPF;assembly=Xamarin.Forms.Platform.WPF"  
+        xmlns:local="clr-namespace:BugLog.Wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <Grid Visibility="{Binding Path=IsAuthenticated, Converter={StaticResource InverseVisibilityConverter}, FallbackValue=null}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition  Width="*"/>
+                <ColumnDefinition  Width="300"/>
+                <ColumnDefinition  Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="1" Grid.Column="1" >
+                <TextBlock>Email</TextBlock>
+                <TextBox Text="{Binding  Path=LoginVM.EmailAddress, Mode=TwoWay}" />
+                <TextBlock>Password</TextBlock>
+                <TextBox Text="{Binding Path=LoginVM.Password, Mode=TwoWay}" />
+                <Button Command="{Binding LoginCommand}" Content="Login" />
+            </StackPanel>
+        </Grid>
+
+        <Grid Visibility="{Binding Path=IsAuthenticated, Converter={StaticResource VisibilityConverter}, FallbackValue=null}" x:Name="parentSource">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="200" />
+            </Grid.ColumnDefinitions>
+            <ListView ItemsSource="{Binding FilteredTasks}" HorizontalContentAlignment="Stretch">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="64" />
+                                <ColumnDefinition Width="30" />
+                                <ColumnDefinition Width="64" />
+                                <ColumnDefinition Width="30" />
+                                
+                                <ColumnDefinition Width="*" />
+                                
+                                <ColumnDefinition Width="100" />
+                                <ColumnDefinition Width="100" />
+                                
+                                <ColumnDefinition Width="30" />
+                                <ColumnDefinition Width="30" />
+                                <ColumnDefinition Width="30" />
+                            </Grid.ColumnDefinitions>
+                            
+                            <TextBlock Text="{Binding TaskCode}" />
+                            <Button Grid.Column="1" BorderBrush="Transparent" Background="Transparent" Command="{Binding Path=DataContext.OpenFullTaskCommand, ElementName=parentSource}" CommandParameter="{Binding .}">
+                                <fa5:SvgAwesome Grid.Column="1" Icon="Solid_Link" Foreground="#D48d17"   VerticalAlignment="Center" HorizontalAlignment="Center"  Width="16" Height="16" />
+                            </Button>
+
+                            <TextBlock Text="{Binding ExternalTaskCode}" Grid.Column="2" />
+                            <fa5:SvgAwesome Grid.Column="3" Icon="Solid_Link" Foreground="#D48d17"  VerticalAlignment="Center" HorizontalAlignment="Center"  Width="16" Height="16"/>
+
+                            <TextBlock Text="{Binding Name}" Grid.Column="4"  TextTrimming="CharacterEllipsis"/>
+                            <TextBlock Text="{Binding Status}" Grid.Column="5" />
+                            <TextBlock Text="{Binding TaskType}" Grid.Column="6" />
+
+                            <Button Grid.Column="7" BorderBrush="Transparent" Background="Transparent" Command="{Binding Path=DataContext.ShowRepoViewCommand, ElementName=parentSource}" CommandParameter="{Binding .}">
+                                <fa5:SvgAwesome  Icon="Brands_Github" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#D48d17"  Width="16" Height="16"/>
+                            </Button>
+                            <Button Grid.Column="8" BorderBrush="Transparent" Background="Transparent" Command="{Binding Path=DataContext.AddTimeCommand, ElementName=parentSource}" CommandParameter="{Binding .}">
+                                <fa5:SvgAwesome  Icon="Regular_Clock" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#D48d17"   Width="16" Height="16"/>
+                            </Button>
+                            <Button Grid.Column="9" BorderBrush="Transparent" Background="Transparent" Command="{Binding Path=DataContext.AddRelatedTaskCommand, ElementName=parentSource}" CommandParameter="{Binding .}">
+                                <fa5:SvgAwesome Icon="Solid_Bug" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#D48d17"      Width="16" Height="16" />
+                            </Button>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <StackPanel Grid.Column="1">
+                <TextBlock>View</TextBlock>
+                <ComboBox ItemsSource="{Binding FilteredViews}" SelectedItem="{Binding SelectedKanbanView}"  />
+                <TextBlock>Project</TextBlock>
+                <ComboBox ItemsSource="{Binding Projects}" SelectedItem="{Binding SelectedProjectFilter}"  />
+                <TextBlock>Status</TextBlock>
+                <ComboBox ItemsSource="{Binding StatusFilter}" SelectedItem="{Binding SelectedStatusFilter}"  />
+                <TextBlock>Task Type</TextBlock>
+                <ComboBox ItemsSource="{Binding WorkTaskTypesFilter}" SelectedItem="{Binding SelectedWorKTypeFilter}"  />
+            </StackPanel>
+        </Grid>
+
+        <Grid Width="300" Height="150"  Background="White" Visibility="{Binding ErrorContent, Converter={StaticResource VisibilityConverter}, FallbackValue=null}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Rectangle Fill="AliceBlue" Grid.RowSpan="2" RadiusX="10" RadiusY="10"></Rectangle>
+            <TextBlock Text="{Binding ErrorContent, FallbackValue=No Content}"  />
+            <Button Command="{Binding CloseErrorContentCommand}" Grid.Row="1" HorizontalAlignment="Right" Width="120" Height="32" >Close</Button>
+        </Grid>
+
+        <Grid Visibility="{Binding TimeEntryTask, Converter={StaticResource VisibilityConverter}}" Width="300" Height="180" >
+
+            <Grid Background="Beige">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <StackPanel Margin="10">
+                    <TextBlock Text="{Binding TimeEntryTask.Name}" FontSize="18" FontWeight="Bold" />
+                    <Grid  >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <!--<pge:IconButton HeightRequest="32" FontSize="14" IconKey="fa-arrow-left" Grid.Column="0" Command="{Binding TimeEntryPrevDateCommand }"  />
+                        <pge:Label HeightRequest="32" VerticalTextAlignment="Center"  HorizontalTextAlignment="Center" FontSize="14"  Text="{Binding TimeEntryDateDisplay}" Grid.Column="1" />
+                        <pge:IconButton HeightRequest="32" FontSize="14"  IconKey="fa-arrow-right" Grid.Column="2" Command="{Binding TimeEntryNextDateCommand }" />-->
+                    </Grid>
+
+                    <TextBlock Text="Hours" />
+                    <TextBox  Text="{Binding TimeEntryHours, Mode=TwoWay}"  HorizontalContentAlignment="Right"   />
+
+                    <TextBlock Text="Notes" />
+                    <TextBox Text="{Binding TimeEntryNotes, Mode=TwoWay}" />
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Button Width="120" Grid.Row="1" Command="{Binding SaveNewTimeCommand}" >Save</Button>
+                        <Button Width="120" Grid.Row="1" Margin="10,0,0,0" Command="{Binding CancelNewTimeCommand}" >Cancel</Button>
+                    </StackPanel>
+
+                </StackPanel>
+            </Grid>
+
+        </Grid>
+
+        <Grid Visibility="{Binding RepoVM, Converter={StaticResource VisibilityConverter}}" Width="800" Height="600" >
+            <Grid Background="Beige">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="550" />
+                    <RowDefinition Height="48" />
+                </Grid.RowDefinitions>
+               
+                <ctl:RepoSupport DataContext="{Binding RepoVM}" />
+                <Button Command="{Binding CloseReposCommand}"   Grid.Row="1" Height="120" Width="40" >Close</Button>
+            </Grid>
+        </Grid>
+
+        <Rectangle Visibility="{Binding IsBusy, Converter={StaticResource VisibilityConverter}}"  Opacity="0.2" Fill="Black"></Rectangle>
+        <TextBlock Text="{Binding Status, FallbackValue=Idle}" Grid.Row="1" />
     </Grid>
-</wpf:FormsApplicationPage>
+</Window>
