--- a/Apps/buglog/BugLog.WPF/MainWindow.xaml
+++ b/Apps/buglog/BugLog.WPF/MainWindow.xaml
@@ -39,26 +39,26 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="200" />
             </Grid.ColumnDefinitions>
-            <ListView ItemsSource="{Binding FilteredTasks}" HorizontalContentAlignment="Stretch">
+            <ListView ItemsSource="{Binding FilteredTasks}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalContentAlignment="Stretch">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="64" />
                                 <ColumnDefinition Width="30" />
-                                <ColumnDefinition Width="64" />
+                                <ColumnDefinition Width="50" />
                                 <ColumnDefinition Width="30" />
-                                
+
                                 <ColumnDefinition Width="*" />
-                                
+
                                 <ColumnDefinition Width="100" />
                                 <ColumnDefinition Width="100" />
-                                
+
                                 <ColumnDefinition Width="30" />
                                 <ColumnDefinition Width="30" />
                                 <ColumnDefinition Width="30" />
                             </Grid.ColumnDefinitions>
-                            
+
                             <TextBlock Text="{Binding TaskCode}" />
                             <Button Grid.Column="1" BorderBrush="Transparent" Background="Transparent" Command="{Binding Path=DataContext.OpenFullTaskCommand, ElementName=parentSource}" CommandParameter="{Binding .}">
                                 <fa5:SvgAwesome Grid.Column="1" Icon="Solid_Link" Foreground="#D48d17"   VerticalAlignment="Center" HorizontalAlignment="Center"  Width="16" Height="16" />
@@ -106,13 +106,11 @@
             <Button Command="{Binding CloseErrorContentCommand}" Grid.Row="1" HorizontalAlignment="Right" Width="120" Height="32" >Close</Button>
         </Grid>
 
-        <Grid Visibility="{Binding TimeEntryTask, Converter={StaticResource VisibilityConverter}}" Width="300" Height="180" >
+        <Grid Visibility="{Binding TimeEntryTask, Converter={StaticResource VisibilityConverter}}" Width="400" Height="280" >
+            <Rectangle Style="{StaticResource Popup}" />
 
-            <Grid Background="Beige">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                </Grid.RowDefinitions>
-                <StackPanel Margin="10">
+            <Grid Style="{StaticResource PopupContent}">
+                <StackPanel >
                     <TextBlock Text="{Binding TimeEntryTask.Name}" FontSize="18" FontWeight="Bold" />
                     <Grid  >
                         <Grid.ColumnDefinitions>
@@ -130,26 +128,31 @@
 
                     <TextBlock Text="Notes" />
                     <TextBox Text="{Binding TimeEntryNotes, Mode=TwoWay}" />
+
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <Button Width="120" Grid.Row="1" Command="{Binding SaveNewTimeCommand}" >Save</Button>
-                        <Button Width="120" Grid.Row="1" Margin="10,0,0,0" Command="{Binding CancelNewTimeCommand}" >Cancel</Button>
                     </StackPanel>
-
                 </StackPanel>
             </Grid>
 
+            <Border Style="{StaticResource PopupTitleBorder}" />
+            <TextBlock Text="Time Entry" Foreground="White" Margin="5,5,0,0" Width="150" />
+            <Button Command="{Binding CancelNewTimeCommand}" Style="{StaticResource PopupCloseButton}" />
         </Grid>
+        
 
         <Grid Visibility="{Binding RepoVM, Converter={StaticResource VisibilityConverter}}" Width="800" Height="600" >
-            <Grid Background="Beige">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="550" />
-                    <RowDefinition Height="48" />
-                </Grid.RowDefinitions>
-               
+            <Rectangle Style="{StaticResource Popup}" />
+
+            <Grid Style="{StaticResource PopupContent}">
                 <ctl:RepoSupport DataContext="{Binding RepoVM}" />
-                <Button Command="{Binding CloseReposCommand}"   Grid.Row="1" Height="120" Width="40" >Close</Button>
             </Grid>
+
+            <Border Style="{StaticResource PopupTitleBorder}" />
+
+            <TextBlock Text="GIT Branch Management" Foreground="White" Margin="5,5,0,0" Width="150" />
+
+            <Button Command="{Binding CloseReposCommand}" Style="{StaticResource PopupCloseButton}" />
         </Grid>
 
         <Rectangle Visibility="{Binding IsBusy, Converter={StaticResource VisibilityConverter}}"  Opacity="0.2" Fill="Black"></Rectangle>
