--- a/Apps/buglog/BugLog.WPF/App.xaml
+++ b/Apps/buglog/BugLog.WPF/App.xaml
@@ -14,6 +14,7 @@
             <Setter Property="Background" Value="Azure" />
             <Setter Property="Height" Value="32" />
             <Setter Property="Width" Value="120" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
             <Style.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="5" />
@@ -57,6 +58,16 @@
             <Setter Property="Margin" Value="0,0,0,5" />
             <Setter Property="FontSize" Value="14" />
             <Setter Property="Padding" Value="5" />
+        </Style>
+
+        <Style TargetType="TextBlock" x:Key="PopupTItle" >
+            <Setter Property="Margin" Value="5,5,0,0" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Foreground" Value="white" />
+            <Setter Property="Width" Value="200" />
+            <Setter Property="Height" Value="26" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="VerticalAlignment" Value="Top" />
         </Style>
 
     </Application.Resources>
